# bmk

./: .gitignore  Dockerfile  README.md
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/arm/bmk_board/: Kconfig.board  Kconfig.defconfig  bmk_board.dts  bmk_board_defconfig  board.cmake
app/boards/arm/nrf52840/: Kconfig.board  Kconfig.defconfig  board.cmake  nrf52840-pinctrl.dtsi  nrf52840.dts  nrf52840_defconfig  pre_dt_board.cmake
app/dts/bindings/: bmk,kscan-matrix.yaml
app/keyboards/miguelio/mk60v1/: keyboard.c  keyboard.h  keymap.c  matrix.c  nrf52840.overlay  prj.conf  rgb.overlay
app/src/: bmk.h  hid.h  keymap.c  keymap.h  main.c  main.h  matrix.h  voltage.c
documentation/: index.html
